--- a/16-mt.qmd
+++ b/16-mt.qmd
@@ -4,7 +4,7 @@ format:
     toc: true
     toc-depth: 4
 ---
-```{r echo = FALSE, warning = FALSE}
+```{r echo = FALSE, warning = FALSE, message = FALSE}
 
 library(tidyverse)
 library(xfun) # numbers_to_words function
@@ -29,6 +29,11 @@ data <- read.csv(paste0("data/", year, "_annualreportdata.csv"))
 ```
 
 # Montana 
+
+In 2024, we had complete survey coverage across the state of Montana (@fig-mt).
+
+
+![Survey locations and strata in Montana, 2024.](figures/MT_Report_2024.png){#fig-mt}
 
 ## Montana Statewide: Total 
 
