--- a/11-nps.qmd
+++ b/11-nps.qmd
@@ -4,7 +4,7 @@ format:
     toc: true
     toc-depth: 4
 ---
-```{r echo = FALSE, warning = FALSE}
+```{r echo = FALSE, warning = FALSE, message =FALSE}
 
 library(tidyverse)
 library(xfun) # numbers_to_words function
