--- a/9-blm.qmd
+++ b/9-blm.qmd
@@ -4,7 +4,7 @@ format:
     toc: true
     toc-depth: 4
 ---
-```{r echo = FALSE, warning = FALSE}
+```{r echo = FALSE, warning = FALSE, message =FALSE}
 
 library(tidyverse)
 library(xfun) # numbers_to_words function
