update fig and caption

--- a/25-special-feature.qmd
+++ b/25-special-feature.qmd
@@ -33,6 +33,6 @@ The Savannah Sparrow is not currently a priority species for conservation throug
 
 The Evening Grosbeak is a forest specialist and a Road to Recovery tipping point species that has experienced long term population declines (https://r2rbirds.org/tipping-point-species/). However, IMBCR data show variation in population trends throughout the Rockies. For example, populations in some USFS units, like Kootenai National Forest, have experienced declines, while populations in other units, like Helena National Forest, have increased since 2009. Monitoring populations at both local and regional scales can facilitate a mechanistic understanding of how local and regional processes may interact and affect populations, such as the Evening Grosbeak (Hewitt et al. 2007, Pavlacky et al. 2017).   
 
-![Management units with increasing Evening Grosbeak trends in blue and decreasing trends in red.](/figures/EVGR-trends.png){#fig-trends}
+![USFS units with increasing Evening Grosbeak trends in blue, decreasing trends in red, and the Evening Grosbeak breeding range shown in yellow.](/figures/EVGR-trends.png){#fig-trends}
 
 Visit the Rocky Mountain Avian Data Center (https://apps.birdconservancy.org/rmadc/) to view trends for species of interest in your management area (click on “Explore the Data” to select filters of interest). IMBCR estimates are available for numerous focal areas or “strata”, where partners have invested in monitoring, such as the Bighorn National Forest in Wyoming.  The “Superstratum” filter is helpful to find trends for broader regions or statewide (e.g., the BCR18-portion of Colorado) that provide context for strata. Filter trends by f-value >0.9 to view only robust estimates; these estimates are highlighted in yellow and estimates with a more stringent threshold of f >0.975 are shown in gold. Increasing trends are highlighted in blue, while decreasing trends are shown in red. Please note, we now provide two trend metrics: trend based on the annual density estimates and trend based on occupancy estimates. Although density and occupancy have different units, trend on either is interpreted the same way: as the percent population change per year during the monitoring period. Visit the “Tutorial” page for additional information on using the site and interpreting the estimates.
