--- a/13-bcr.qmd
+++ b/13-bcr.qmd
@@ -4,7 +4,7 @@ format:
     toc: true
     toc-depth: 4
 ---
-```{r echo = FALSE, message = FALSE}
+```{r echo = FALSE, message = FALSE, warning = FALSE}
 
 library(tidyverse)
 library(xfun) # numbers_to_words function
