--- a/9-blm.qmd
+++ b/9-blm.qmd
@@ -173,6 +173,79 @@ On the Explore the Data tab, select **`r super_stratum`** from the **`r type`** 
 :::
 
 
+## BLM Colorado 
+
+
+```{r, echo = FALSE, message = FALSE}
+# This script should not need to be updated year to year!
+
+# CO-BLM is a special value from the heddlr_loop.qmd file
+x <- which(data$stratum == "CO-BLM")
+
+name <- data[x, "name"]
+compilation <- ifelse(data[x, "Strata"] > 1, "compiling and jointly", "compiling and")
+n.strata <- if (data[x, "Strata"] <= 10) {numbers_to_words(data[x, "Strata"])
+  } else data[x, "Strata"]
+stratum_plural <- ifelse(data[x, "Strata"] > 1, "strata", "stratum")
+completed.grids <- (data[x, "CompletedGrids"])
+planned.grids <- (data[x, "PlannedGrids"])
+percent.completed <- round((completed.grids/planned.grids)*100)
+
+transect.clause <- if (planned.grids == completed.grids & planned.grids > 2) {
+  paste("all")
+  } else if (planned.grids == completed.grids & planned.grids == 2) {paste("both")
+  } else {paste((completed.grids), 
+             "of", 
+             (planned.grids),
+             sep = " ")}
+
+year <- data[x, "Year"]
+completed.points <- data[x, "CompletedPoints"]
+first.visit <- data[x, "FirstVisit"]
+last.visit <- data[x, "LastVisit"]
+n.species <- data[x, "nBirdSpecies"]
+n.priority <- data[x, "nPriority"]
+n.density <- data[x, "DensitySpeciesCount"]
+n.density.priority <- data[x, "DensityPrioritySpecies"]
+n.density.robust <- data[x, "DensityRobustCV"]
+n.occupancy <- data[x, "OccupancySpeciesCount"]
+n.occupancy.priority <- data[x, "OccupancyPrioritySpecies"]
+n.occupancy.robust <- data[x, "OccupancyRobustCV"]
+type <- if (data[x, "is_superstratum"]) {"Superstratum"} else {"Stratum"}
+super_stratum <- if (data[x, "is_superstratum"]) {data[x, "stratum"]} else {data[x, "LongStratum"]}
+
+p1 <- str_glue("We obtained results for {name} by {compilation} analyzing data from {n.strata} {stratum_plural}.")
+
+p2 <- str_glue("Field technicians completed {transect.clause} planned surveys ({percent.completed}%) in {year}. Technicians conducted {completed.points} point counts within the {completed.grids} surveyed grid cells between {first.visit} and {last.visit}. They detected {n.species} bird species, including {n.priority} priority species.")
+
+p3 <- str_glue("Bird Conservancy estimated densities (birds per square kilometer) for {n.density} species that were detected in any year during which surveys were conducted, {n.density.priority} of which are priority species. The data yielded robust density estimates (CV < 50%) for {n.density.robust} species.")
+
+p4 <- str_glue("Bird Conservancy estimated the proportion of occupied plots throughout {name} for {n.occupancy} species that were detected in any year during which surveys were conducted, {n.occupancy.priority} of which are priority species. The data yielded robust occupancy estimates (CV < 50%) for {n.occupancy.robust} species.")
+
+p5 <- str_glue("To view a map of survey locations, density, occupancy, & trend results and species counts within {name} across all years of the project, visit the [RMADC](https://apps.birdconservancy.org/rmadc/).")
+
+head <- paste("####", name, sep = " ")
+
+```
+
+`r head`
+
+`r p1`
+
+`r p2`
+
+`r p3`
+
+`r p4`
+
+::: {.callout-note appearance="minimal"}
+## View results on the Rocky Mountain Avian Data Center
+`r p5`  
+
+On the Explore the Data tab, select **`r super_stratum`** from the **`r type`** drop-down filter.
+:::
+
+
 
 
 ```{r, echo = FALSE, message = FALSE}
@@ -972,6 +1045,79 @@ On the Explore the Data tab, select **`r super_stratum`** from the **`r type`** 
 
 # CO-BLM - White River Field Office is a special value from the heddlr_loop.qmd file
 x <- which(data$stratum == "CO-BLM - White River Field Office")
+
+name <- data[x, "name"]
+compilation <- ifelse(data[x, "Strata"] > 1, "compiling and jointly", "compiling and")
+n.strata <- if (data[x, "Strata"] <= 10) {numbers_to_words(data[x, "Strata"])
+  } else data[x, "Strata"]
+stratum_plural <- ifelse(data[x, "Strata"] > 1, "strata", "stratum")
+completed.grids <- (data[x, "CompletedGrids"])
+planned.grids <- (data[x, "PlannedGrids"])
+percent.completed <- round((completed.grids/planned.grids)*100)
+
+transect.clause <- if (planned.grids == completed.grids & planned.grids > 2) {
+  paste("all")
+  } else if (planned.grids == completed.grids & planned.grids == 2) {paste("both")
+  } else {paste((completed.grids), 
+             "of", 
+             (planned.grids),
+             sep = " ")}
+
+year <- data[x, "Year"]
+completed.points <- data[x, "CompletedPoints"]
+first.visit <- data[x, "FirstVisit"]
+last.visit <- data[x, "LastVisit"]
+n.species <- data[x, "nBirdSpecies"]
+n.priority <- data[x, "nPriority"]
+n.density <- data[x, "DensitySpeciesCount"]
+n.density.priority <- data[x, "DensityPrioritySpecies"]
+n.density.robust <- data[x, "DensityRobustCV"]
+n.occupancy <- data[x, "OccupancySpeciesCount"]
+n.occupancy.priority <- data[x, "OccupancyPrioritySpecies"]
+n.occupancy.robust <- data[x, "OccupancyRobustCV"]
+type <- if (data[x, "is_superstratum"]) {"Superstratum"} else {"Stratum"}
+super_stratum <- if (data[x, "is_superstratum"]) {data[x, "stratum"]} else {data[x, "LongStratum"]}
+
+p1 <- str_glue("We obtained results for {name} by {compilation} analyzing data from {n.strata} {stratum_plural}.")
+
+p2 <- str_glue("Field technicians completed {transect.clause} planned surveys ({percent.completed}%) in {year}. Technicians conducted {completed.points} point counts within the {completed.grids} surveyed grid cells between {first.visit} and {last.visit}. They detected {n.species} bird species, including {n.priority} priority species.")
+
+p3 <- str_glue("Bird Conservancy estimated densities (birds per square kilometer) for {n.density} species that were detected in any year during which surveys were conducted, {n.density.priority} of which are priority species. The data yielded robust density estimates (CV < 50%) for {n.density.robust} species.")
+
+p4 <- str_glue("Bird Conservancy estimated the proportion of occupied plots throughout {name} for {n.occupancy} species that were detected in any year during which surveys were conducted, {n.occupancy.priority} of which are priority species. The data yielded robust occupancy estimates (CV < 50%) for {n.occupancy.robust} species.")
+
+p5 <- str_glue("To view a map of survey locations, density, occupancy, & trend results and species counts within {name} across all years of the project, visit the [RMADC](https://apps.birdconservancy.org/rmadc/).")
+
+head <- paste("####", name, sep = " ")
+
+```
+
+`r head`
+
+`r p1`
+
+`r p2`
+
+`r p3`
+
+`r p4`
+
+::: {.callout-note appearance="minimal"}
+## View results on the Rocky Mountain Avian Data Center
+`r p5`  
+
+On the Explore the Data tab, select **`r super_stratum`** from the **`r type`** drop-down filter.
+:::
+
+
+## BLM Idaho 
+
+
+```{r, echo = FALSE, message = FALSE}
+# This script should not need to be updated year to year!
+
+# ID-BLM is a special value from the heddlr_loop.qmd file
+x <- which(data$stratum == "ID-BLM")
 
 name <- data[x, "name"]
 compilation <- ifelse(data[x, "Strata"] > 1, "compiling and jointly", "compiling and")
@@ -1980,6 +2126,79 @@ On the Explore the Data tab, select **`r super_stratum`** from the **`r type`** 
 
 # ID-BLM - Upper Snake Field Office is a special value from the heddlr_loop.qmd file
 x <- which(data$stratum == "ID-BLM - Upper Snake Field Office")
+
+name <- data[x, "name"]
+compilation <- ifelse(data[x, "Strata"] > 1, "compiling and jointly", "compiling and")
+n.strata <- if (data[x, "Strata"] <= 10) {numbers_to_words(data[x, "Strata"])
+  } else data[x, "Strata"]
+stratum_plural <- ifelse(data[x, "Strata"] > 1, "strata", "stratum")
+completed.grids <- (data[x, "CompletedGrids"])
+planned.grids <- (data[x, "PlannedGrids"])
+percent.completed <- round((completed.grids/planned.grids)*100)
+
+transect.clause <- if (planned.grids == completed.grids & planned.grids > 2) {
+  paste("all")
+  } else if (planned.grids == completed.grids & planned.grids == 2) {paste("both")
+  } else {paste((completed.grids), 
+             "of", 
+             (planned.grids),
+             sep = " ")}
+
+year <- data[x, "Year"]
+completed.points <- data[x, "CompletedPoints"]
+first.visit <- data[x, "FirstVisit"]
+last.visit <- data[x, "LastVisit"]
+n.species <- data[x, "nBirdSpecies"]
+n.priority <- data[x, "nPriority"]
+n.density <- data[x, "DensitySpeciesCount"]
+n.density.priority <- data[x, "DensityPrioritySpecies"]
+n.density.robust <- data[x, "DensityRobustCV"]
+n.occupancy <- data[x, "OccupancySpeciesCount"]
+n.occupancy.priority <- data[x, "OccupancyPrioritySpecies"]
+n.occupancy.robust <- data[x, "OccupancyRobustCV"]
+type <- if (data[x, "is_superstratum"]) {"Superstratum"} else {"Stratum"}
+super_stratum <- if (data[x, "is_superstratum"]) {data[x, "stratum"]} else {data[x, "LongStratum"]}
+
+p1 <- str_glue("We obtained results for {name} by {compilation} analyzing data from {n.strata} {stratum_plural}.")
+
+p2 <- str_glue("Field technicians completed {transect.clause} planned surveys ({percent.completed}%) in {year}. Technicians conducted {completed.points} point counts within the {completed.grids} surveyed grid cells between {first.visit} and {last.visit}. They detected {n.species} bird species, including {n.priority} priority species.")
+
+p3 <- str_glue("Bird Conservancy estimated densities (birds per square kilometer) for {n.density} species that were detected in any year during which surveys were conducted, {n.density.priority} of which are priority species. The data yielded robust density estimates (CV < 50%) for {n.density.robust} species.")
+
+p4 <- str_glue("Bird Conservancy estimated the proportion of occupied plots throughout {name} for {n.occupancy} species that were detected in any year during which surveys were conducted, {n.occupancy.priority} of which are priority species. The data yielded robust occupancy estimates (CV < 50%) for {n.occupancy.robust} species.")
+
+p5 <- str_glue("To view a map of survey locations, density, occupancy, & trend results and species counts within {name} across all years of the project, visit the [RMADC](https://apps.birdconservancy.org/rmadc/).")
+
+head <- paste("####", name, sep = " ")
+
+```
+
+`r head`
+
+`r p1`
+
+`r p2`
+
+`r p3`
+
+`r p4`
+
+::: {.callout-note appearance="minimal"}
+## View results on the Rocky Mountain Avian Data Center
+`r p5`  
+
+On the Explore the Data tab, select **`r super_stratum`** from the **`r type`** drop-down filter.
+:::
+
+
+## BLM Montana 
+
+
+```{r, echo = FALSE, message = FALSE}
+# This script should not need to be updated year to year!
+
+# MT-BLM is a special value from the heddlr_loop.qmd file
+x <- which(data$stratum == "MT-BLM")
 
 name <- data[x, "name"]
 compilation <- ifelse(data[x, "Strata"] > 1, "compiling and jointly", "compiling and")
@@ -3458,6 +3677,79 @@ On the Explore the Data tab, select **`r super_stratum`** from the **`r type`** 
 :::
 
 
+## BLM Utah 
+
+
+```{r, echo = FALSE, message = FALSE}
+# This script should not need to be updated year to year!
+
+# UT-BLM is a special value from the heddlr_loop.qmd file
+x <- which(data$stratum == "UT-BLM")
+
+name <- data[x, "name"]
+compilation <- ifelse(data[x, "Strata"] > 1, "compiling and jointly", "compiling and")
+n.strata <- if (data[x, "Strata"] <= 10) {numbers_to_words(data[x, "Strata"])
+  } else data[x, "Strata"]
+stratum_plural <- ifelse(data[x, "Strata"] > 1, "strata", "stratum")
+completed.grids <- (data[x, "CompletedGrids"])
+planned.grids <- (data[x, "PlannedGrids"])
+percent.completed <- round((completed.grids/planned.grids)*100)
+
+transect.clause <- if (planned.grids == completed.grids & planned.grids > 2) {
+  paste("all")
+  } else if (planned.grids == completed.grids & planned.grids == 2) {paste("both")
+  } else {paste((completed.grids), 
+             "of", 
+             (planned.grids),
+             sep = " ")}
+
+year <- data[x, "Year"]
+completed.points <- data[x, "CompletedPoints"]
+first.visit <- data[x, "FirstVisit"]
+last.visit <- data[x, "LastVisit"]
+n.species <- data[x, "nBirdSpecies"]
+n.priority <- data[x, "nPriority"]
+n.density <- data[x, "DensitySpeciesCount"]
+n.density.priority <- data[x, "DensityPrioritySpecies"]
+n.density.robust <- data[x, "DensityRobustCV"]
+n.occupancy <- data[x, "OccupancySpeciesCount"]
+n.occupancy.priority <- data[x, "OccupancyPrioritySpecies"]
+n.occupancy.robust <- data[x, "OccupancyRobustCV"]
+type <- if (data[x, "is_superstratum"]) {"Superstratum"} else {"Stratum"}
+super_stratum <- if (data[x, "is_superstratum"]) {data[x, "stratum"]} else {data[x, "LongStratum"]}
+
+p1 <- str_glue("We obtained results for {name} by {compilation} analyzing data from {n.strata} {stratum_plural}.")
+
+p2 <- str_glue("Field technicians completed {transect.clause} planned surveys ({percent.completed}%) in {year}. Technicians conducted {completed.points} point counts within the {completed.grids} surveyed grid cells between {first.visit} and {last.visit}. They detected {n.species} bird species, including {n.priority} priority species.")
+
+p3 <- str_glue("Bird Conservancy estimated densities (birds per square kilometer) for {n.density} species that were detected in any year during which surveys were conducted, {n.density.priority} of which are priority species. The data yielded robust density estimates (CV < 50%) for {n.density.robust} species.")
+
+p4 <- str_glue("Bird Conservancy estimated the proportion of occupied plots throughout {name} for {n.occupancy} species that were detected in any year during which surveys were conducted, {n.occupancy.priority} of which are priority species. The data yielded robust occupancy estimates (CV < 50%) for {n.occupancy.robust} species.")
+
+p5 <- str_glue("To view a map of survey locations, density, occupancy, & trend results and species counts within {name} across all years of the project, visit the [RMADC](https://apps.birdconservancy.org/rmadc/).")
+
+head <- paste("####", name, sep = " ")
+
+```
+
+`r head`
+
+`r p1`
+
+`r p2`
+
+`r p3`
+
+`r p4`
+
+::: {.callout-note appearance="minimal"}
+## View results on the Rocky Mountain Avian Data Center
+`r p5`  
+
+On the Explore the Data tab, select **`r super_stratum`** from the **`r type`** drop-down filter.
+:::
+
+
 
 
 ```{r, echo = FALSE, message = FALSE}
@@ -4401,6 +4693,79 @@ On the Explore the Data tab, select **`r super_stratum`** from the **`r type`** 
 
 # UT-BLM - Vernal Field Office is a special value from the heddlr_loop.qmd file
 x <- which(data$stratum == "UT-BLM - Vernal Field Office")
+
+name <- data[x, "name"]
+compilation <- ifelse(data[x, "Strata"] > 1, "compiling and jointly", "compiling and")
+n.strata <- if (data[x, "Strata"] <= 10) {numbers_to_words(data[x, "Strata"])
+  } else data[x, "Strata"]
+stratum_plural <- ifelse(data[x, "Strata"] > 1, "strata", "stratum")
+completed.grids <- (data[x, "CompletedGrids"])
+planned.grids <- (data[x, "PlannedGrids"])
+percent.completed <- round((completed.grids/planned.grids)*100)
+
+transect.clause <- if (planned.grids == completed.grids & planned.grids > 2) {
+  paste("all")
+  } else if (planned.grids == completed.grids & planned.grids == 2) {paste("both")
+  } else {paste((completed.grids), 
+             "of", 
+             (planned.grids),
+             sep = " ")}
+
+year <- data[x, "Year"]
+completed.points <- data[x, "CompletedPoints"]
+first.visit <- data[x, "FirstVisit"]
+last.visit <- data[x, "LastVisit"]
+n.species <- data[x, "nBirdSpecies"]
+n.priority <- data[x, "nPriority"]
+n.density <- data[x, "DensitySpeciesCount"]
+n.density.priority <- data[x, "DensityPrioritySpecies"]
+n.density.robust <- data[x, "DensityRobustCV"]
+n.occupancy <- data[x, "OccupancySpeciesCount"]
+n.occupancy.priority <- data[x, "OccupancyPrioritySpecies"]
+n.occupancy.robust <- data[x, "OccupancyRobustCV"]
+type <- if (data[x, "is_superstratum"]) {"Superstratum"} else {"Stratum"}
+super_stratum <- if (data[x, "is_superstratum"]) {data[x, "stratum"]} else {data[x, "LongStratum"]}
+
+p1 <- str_glue("We obtained results for {name} by {compilation} analyzing data from {n.strata} {stratum_plural}.")
+
+p2 <- str_glue("Field technicians completed {transect.clause} planned surveys ({percent.completed}%) in {year}. Technicians conducted {completed.points} point counts within the {completed.grids} surveyed grid cells between {first.visit} and {last.visit}. They detected {n.species} bird species, including {n.priority} priority species.")
+
+p3 <- str_glue("Bird Conservancy estimated densities (birds per square kilometer) for {n.density} species that were detected in any year during which surveys were conducted, {n.density.priority} of which are priority species. The data yielded robust density estimates (CV < 50%) for {n.density.robust} species.")
+
+p4 <- str_glue("Bird Conservancy estimated the proportion of occupied plots throughout {name} for {n.occupancy} species that were detected in any year during which surveys were conducted, {n.occupancy.priority} of which are priority species. The data yielded robust occupancy estimates (CV < 50%) for {n.occupancy.robust} species.")
+
+p5 <- str_glue("To view a map of survey locations, density, occupancy, & trend results and species counts within {name} across all years of the project, visit the [RMADC](https://apps.birdconservancy.org/rmadc/).")
+
+head <- paste("####", name, sep = " ")
+
+```
+
+`r head`
+
+`r p1`
+
+`r p2`
+
+`r p3`
+
+`r p4`
+
+::: {.callout-note appearance="minimal"}
+## View results on the Rocky Mountain Avian Data Center
+`r p5`  
+
+On the Explore the Data tab, select **`r super_stratum`** from the **`r type`** drop-down filter.
+:::
+
+
+## BLM Wyoming 
+
+
+```{r, echo = FALSE, message = FALSE}
+# This script should not need to be updated year to year!
+
+# WY-BLM is a special value from the heddlr_loop.qmd file
+x <- which(data$stratum == "WY-BLM")
 
 name <- data[x, "name"]
 compilation <- ifelse(data[x, "Strata"] > 1, "compiling and jointly", "compiling and")
